# secGear

./: .gitignore  CMakeLists.txt  environment
docs/: riscv_tee.md
examples/: CMakeLists.txt
examples/calcu_enclave/: CMakeLists.txt  calcu_enclave.edl
examples/calcu_enclave/enclave/: CMakeLists.txt  hello.c
examples/calcu_enclave/host/: CMakeLists.txt  main.c
examples/calcu_enclave/penglai_calcu_lib/: Makefile
examples/calcu_enclave/penglai_calcu_lib/include/: penglai_tstdio.edl
examples/calcu_enclave/penglai_calcu_lib/libpenglai_calcu_lib/: Makefile  (+1 more)
examples/helloworld/enclave/: CMakeLists.txt
examples/helloworld_with_ocall/: CMakeLists.txt  helloworld_with_ocall.edl
examples/helloworld_with_ocall/enclave/: CMakeLists.txt  hello.c
examples/helloworld_with_ocall/host/: CMakeLists.txt  main.c
examples/seal_data/: CMakeLists.txt
examples/seal_data/enclave/: CMakeLists.txt
examples/seal_data/host/: CMakeLists.txt
examples/tls_enclave/: CMakeLists.txt  tls_enclave.edl
examples/tls_enclave/client/: CMakeLists.txt  tls_client.c
examples/tls_enclave/enclave/: CMakeLists.txt  enclave_server.c
examples/tls_enclave/host/: CMakeLists.txt  main.c
examples/tls_enclave/key_files/: server.key  server.pem
inc/enclave_inc/penglai/: dataseal_internal.h  penglai_ocall.h
src/enclave_src/penglai/: CMakeLists.txt  error_conversion.c  penglai_seal_data.c
src/host_src/: CMakeLists.txt  enclave_internal.c
src/host_src/penglai/: penglai_enclave.c
tools/codegener/: CMakeLists.txt  dune-project
tools/codegener/penglai/: GentrustPL.ml
(+6 files in other folders)
